After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788292 - screen: Unset timeout ID after removal
screen: Unset timeout ID after removal
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-09-28 13:12 UTC by Florian Müllner
Modified: 2017-09-28 13:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screen: Unset timeout ID after removal (899 bytes, patch)
2017-09-28 13:12 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-09-28 13:12:36 UTC
See patch.
Comment 1 Florian Müllner 2017-09-28 13:12:40 UTC
Created attachment 360602 [details] [review]
screen: Unset timeout ID after removal

Otherwise we may try to remove the now invalid ID again, resulting
in a warning.
Comment 2 Jonas Ådahl 2017-09-28 13:51:39 UTC
Review of attachment 360602 [details] [review]:

lgtm.
Comment 3 Florian Müllner 2017-09-28 13:55:14 UTC
Attachment 360602 [details] pushed as 34207ba - screen: Unset timeout ID after removal